[package]
name = "neo"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5.39", features = ["derive"] }

# Crawler
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "brotli"] }
scraper = "0.20"
url = "2"
governor = "0.6"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
